<resources>
    <string name="app_name">BattleShip</string>
    <string name="button_start">Start</string>
    <string name="button_resume">Resume</string>
    <string name="button_new_game">New</string>
    <string name="button_exit">Exit</string>
    <string name="option_confirm">Confirm</string>
    <string name="option_use_index">Index</string>

    <string name="a">А</string>
    <string name="b">Б</string>
    <string name="c">В</string>
    <string name="d">Г</string>
    <string name="e">Д</string>
    <string name="f">Е</string>
    <string name="j">Ж</string>
    <string name="h">З</string>
    <string name="i">И</string>
    <string name="g">К</string>

    <string name="install_boat">Поставьте %1$s %2$d-палубный…</string>

    <string name="turn_number">Ход %1$d</string>
    <string name="turn_fail">Ход № %1$d - мимо</string>
    <string name="turn_scored">Ход № %1$d - ранен</string>
    <string name="turn_dead">Turn № %1$d - убит</string>

    <string name="game_over">GAME OVER. Сделано ходов - %1$d</string>

    <string name="pref_sync">pref_sync</string>
    <string name="title_activity_settings">Настройки</string>


    <!-- Preferences -->
    <string name="boat_installing">Установка кораблей</string>
    <string name="confirm_install">Подтверждать установку корабля</string>
    <string name="field_look">Внешний вид поля</string>
    <string name="show_index">Пказывать индекс клеток (буквы и цифры)</string>
    <string name="install_boats">Расставьте корабли</string>
    <string name="horizontal">Горизонтальный</string>
    <string name="vertical">Вертикальный</string>
    <string name="sound_settings">Звуки</string>
    <string name="sound_toggle">Включить звуки</string>
    <string name="vibration_settings">Вибрация</string>
    <string name="vibration_toggle">Вибрация при попадании в корабль</string>


    <string name="confirm_install_key">confirm_install_key</string>
    <string name="show_index_key">show_index_key</string>
    <string name="sound_settings_key">sound_settings_key</string>
    <string name="vibration_settings_key">vibration_settings_key</string>


</resources>