<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/boat_installing">
        <SwitchPreferenceCompat

            app:key="confirm_install"
            app:singleLineTitle="false"
            app:title="@string/confirm_install" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/field_look">
        <SwitchPreferenceCompat
            app:key="show_index"
            app:singleLineTitle="false"
            app:title="@string/show_index" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sound_settings">
        <SwitchPreferenceCompat
            app:key="sound_settings"
            app:singleLineTitle="false"
            app:title="@string/sound_toggle" />
    </PreferenceCategory>
</PreferenceScreen>